--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <base href="/dagkwbnsq1m/">
+    <base href="/assets/">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
